admin setup and payment module integration